* configure.in proxy/Makefile.am proxy/libvirt_proxy.c   src/Makefile.am src/libvirt.c src/qemu_internal.c src/test.c   src/xen_internal.c src/xen_internal.h src/xend_internal.c   src/xm_internal.c src/xml.c src/xs_internal.c   tests/Makefile.am tests/sexpr2xmltest.c tests/xmconfigtest.c:   allow selective compilation of Xen,QEmu/KVM and test support   in or out at configure time. Also allows to compile on a system   without Xen development installed. All drivers are selected by   default. Daniel

--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -3,7 +3,7 @@
 INCLUDES = -I$(top_builddir)/include -I@top_srcdir@/include \
            -I@top_srcdir@/proxy -I@top_srcdir@/src @LIBXML_CFLAGS@ \
 	   -DPROXY  -DLOCALEBASEDIR=\""$(datadir)/locale"\" \
-           -DGETTEXT_PACKAGE=\"$(PACKAGE)\" $(WARN_CFLAGS)
+           -DGETTEXT_PACKAGE=\"$(PACKAGE)\" $(WARN_CFLAGS) $(LIBVIRT_FEATURES)
 
 libexec_PROGRAMS = libvirt_proxy
 
