--- a/configure.in
+++ b/configure.in
@@ -63,6 +63,14 @@ AC_ARG_WITH(html-subdir, AC_HELP_STRING([--with-html-subdir=path],
             [HTML_DIR="$HTML_DIR/\$(PACKAGE)-\$(VERSION)/html"])
 AC_SUBST(HTML_DIR)
 
+dnl Allow to build without Xen, QEMU/KVM or test driver
+AC_ARG_WITH(xen,
+[  --with-xen              add XEN support (on)])
+AC_ARG_WITH(qemu,
+[  --with-qemu             add QEMU/KVM support (on)])
+AC_ARG_WITH(test,
+[  --with-test             add test driver support (on)])
+
 dnl
 dnl specific tests to setup DV devel environments with debug etc ...
 dnl
@@ -156,11 +164,35 @@ dnl
 AC_ARG_WITH(depends,
 	[  --with-depends          check for dependancies (on)])
 
+LIBVIRT_FEATURES=
+WITH_XEN=0
+
+if test "$with_qemu" = "no" ; then
+    echo "Disabling QEMU/KVM support"
+else
+    LIBVIRT_FEATURES="$LIBVIRT_FEATURES -DWITH_QEMU"
+fi
+
+if test "$with_test" = "no" ; then
+    echo "Disabling test driver support"
+else
+    LIBVIRT_FEATURES="$LIBVIRT_FEATURES -DWITH_TEST"
+fi
+
 if test "$with_depends" != "no"
 then
 
-dnl search for the Xen store library
-AC_SEARCH_LIBS(xs_read, [xenstore], [], [AC_MSG_ERROR([Xen store library not found])])
+if test "$with_xen" = "no" ; then
+    echo Disabling XEN support
+else
+    dnl search for the Xen store library
+    AC_SEARCH_LIBS(xs_read, [xenstore],
+                   [WITH_XEN=1],
+                   [AC_MSG_RESULT([Xen store library not found])])
+    if test "$WITH_XEN" != "0" ; then
+        LIBVIRT_FEATURES="$LIBVIRT_FEATURES -DWITH_XEN"
+    fi
+fi
 
 dnl
 dnl check for libsyfs (>= 2.0.0); allow disabling bridge parameters support altogether
@@ -244,6 +276,9 @@ AC_SUBST(VIRSH_LIBS)
 
 # end of if with_depends
 fi
+
+AC_SUBST(WITH_XEN)
+AC_SUBST(LIBVIRT_FEATURES)
 
 dnl
 dnl check for python
