--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,7 +19,8 @@ INCLUDES = \
         -D_XOPEN_SOURCE=600 -D_POSIX_C_SOURCE=199506L \
         -DGETTEXT_PACKAGE=\"$(PACKAGE)\" \
          $(COVERAGE_CFLAGS) \
-         $(WARN_CFLAGS)
+         $(WARN_CFLAGS)	\
+	 $(LIBVIRT_FEATURES)
 
 LDADDS = \
 	@STATIC_BINARIES@ \
