Fixed Xen capabilities parsing & added test suite

--- a/configure.in
+++ b/configure.in
@@ -431,4 +431,5 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           tests/xml2sexprdata/Makefile \
           tests/sexpr2xmldata/Makefile \
           tests/xmconfigdata/Makefile \
+          tests/xencapsdata/Makefile \
           tests/virshdata/Makefile tests/confdata/Makefile)
