Rename the daemon to libvirtd

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -135,7 +135,7 @@ fi
 %dir %{_localstatedir}/lib/libvirt/
 %dir %attr(0700, root, root) %{_localstatedir}/log/libvirt/qemu/
 %attr(4755, root, root) %{_libexecdir}/libvirt_proxy
-%attr(0755, root, root) %{_sbindir}/libvirt_qemud
+%attr(0755, root, root) %{_sbindir}/libvirtd
 %doc docs/libvirt.rng
 
 %files devel
