--- a/qemud/libvirtd.init.in
+++ b/qemud/libvirtd.init.in
@@ -1,14 +1,29 @@
 #!/bin/sh
 
-# libvirt_qemud:   QEMU and virtual network management daemon
+# the following is the LSB init header see
+# http://www.linux-foundation.org/spec//booksets/LSB-Core-generic/LSB-Core-generic.html#INITSCRCOMCONV
+#
+### BEGIN INIT INFO
+# Provides: libvirtd
+# Should-Start: xend
+# Default-Start: 3 4 5
+# Short-Description: daemon for libvirt virtualization API
+# Description: This is a daemon for managing QEMU guest instances
+#              and libvirt virtual networks
+#              See http://libvirt.org
+### END INIT INFO
+
+# the following is chkconfig init header
+#
+# libvirtd:   QEMU and virtual network management daemon
 #
 # chkconfig: 345 97 03
 # description:  This is a daemon for managing QEMU guest instances
 #               and libvirt virtual networks
 #               See http://libvirt.org
 #
-# processname: libvirt_qemud
-# pidfile: @localstatedir@/run/libvirt_qemud.pid
+# processname: libvirtd
+# pidfile: @localstatedir@/run/libvirtd.pid
 #
 
 # Sanity checks.
@@ -76,7 +91,10 @@ case "$1" in
         status $PROCESS
         RETVAL=$?
         ;;
-    condrestart)
+    force-reload)
+        reload
+	;;
+    condrestart|try-restart)
         [ -f @localstatedir@/lock/subsys/$SERVICE ] && restart || :
         ;;
     *)
