--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,7 +47,9 @@ CLIENT_SOURCES =						\
 		iptables.c iptables.h 				\
 		uuid.c uuid.h 					\
 		qemu_driver.c qemu_driver.h 			\
-		qemu_conf.c qemu_conf.h
+		qemu_conf.c qemu_conf.h					\
+		openvz_conf.c openvz_conf.h				\
+		openvz_driver.c openvz_driver.h 			
 
 SERVER_SOURCES = 						\
 		../qemud/protocol.h ../qemud/protocol.c		\
