* src/Makefile.am src/openvz_conf.c src/openvz_conf.h   src/openvz_driver.c src/qemu_driver.c src/util.c src/util.h:   cleanup patches from Shuveb Hussain, with new util module for   common code shared between drivers. Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,8 @@ CLIENT_SOURCES =						\
 		qemu_driver.c qemu_driver.h 			\
 		qemu_conf.c qemu_conf.h					\
 		openvz_conf.c openvz_conf.h				\
-		openvz_driver.c openvz_driver.h 			
+		openvz_driver.c openvz_driver.h 		\
+		util.c util.h
 
 SERVER_SOURCES = 						\
 		../qemud/protocol.h ../qemud/protocol.c		\
